spark-analytics/eu-central-1-staging/webview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-analytics-webview-ingress
  labels:
    app.kubernetes.io/name: spark-analytics
    app.kubernetes.io/part-of: nowchess
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: spark-results-st.nowchess.janis-eccarius.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-analytics-webview
                port:
                  number: 8080
  tls:
    - hosts:
        - spark-results-st.nowchess.janis-eccarius.de
      secretName: spark-analytics-webview-staging-cert
